--- a/src/main/resources/static/sass/main.scss
+++ b/src/main/resources/static/sass/main.scss
@@ -5,3 +5,17 @@
 body {
     background-color: rgb(255, 255, 255);
 }
+
+.global-margin-top{
+    margin-top: 50px;
+}
+
+.btn {
+    background-color: $color_dat_naranja1;
+    color:rgb(255, 255, 255) !important; 
+}
+
+#logo_identiDAT {
+    width: 100%;
+    margin-bottom: 50px;
+}
