--- a/src/main/resources/static/sass/main.scss
+++ b/src/main/resources/static/sass/main.scss
@@ -10,6 +10,10 @@ body {
     margin-top: 50px;
 }
 
+.global-margin-bottom{
+    margin-bottom: 50px;
+}
+
 .btn {
     background-color: $color_dat_naranja1;
     color:rgb(255, 255, 255) !important; 
@@ -18,4 +22,8 @@ body {
 #logo_identiDAT {
     width: 100%;
     margin-bottom: 50px;
+}
+
+.logo_smaller{
+    width: 40% !important;
 }
