--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,20 +4,19 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="../static/css/main.css" />
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/materialdesignicons.min.css" />
+		<link rel="stylesheet" href="css/main.css" />
 
 		<title>identiDAT - Register</title>
 	</head>
 
 	<body>
 		
-		<div class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top">
-			<div class="container h-100">
+		<div class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom">
 			  <div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
-				  <img src="../static/img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto">
+				<img src="img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto">
 				  <div class="card" style="border-radius: 15px;">
 					<div class="card-body p-5">
 					  <h2 class="text-uppercase text-center mb-5">Registro en censo DAT</h2>
@@ -50,8 +49,8 @@
 						</div>
 
 						<div class="form-outline mb-3">
-							<label class="form-label" for="degree">Cargo:</label>
-							<input type="text" id="degree" class="form-control form-control-lg" disabled value="Delegado/a del grupo 34"/>
+							<label class="form-label" for="position">Cargo:</label>
+							<input type="text" id="position" class="form-control form-control-lg" disabled value="Delegado/a del grupo 34"/>
 						</div>
 		
 						<div class="form-check d-flex justify-content-center mb-5">
