--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -62,7 +62,7 @@
 		
 						<div class="d-flex justify-content-center">
 						  <a href="profile.html" type="button"
-							class="btn btn-danger btn-block btn-lg text-body">Registrarse</a>
+							class="btn btn-danger btn-dat btn-block btn-lg text-body">Registrarse</a>
 						</div>
 		
 					  </form>
