--- a/src/main/resources/static/sass/main.scss
+++ b/src/main/resources/static/sass/main.scss
@@ -14,7 +14,7 @@ body {
     margin-bottom: 50px;
 }
 
-.btn {
+.btn-dat {
     background-color: $color_dat_naranja1;
     color:rgb(255, 255, 255) !important; 
 }
