--- a/src/main/resources/templates/assistance_jd.html
+++ b/src/main/resources/templates/assistance_jd.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="../static/css/materialdesignicons.min.css" />
 		<link rel="stylesheet" href="../static/css/main.css" />
 
-		<title>identiDAT - Censo</title>
+		<title>identiDAT - Asistencia JD</title>
 	</head>
 
 	<body>
@@ -19,16 +19,14 @@
 			  <div class="row d-flex justify-content-center align-items-center h-100">
 				<img src="../static/img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto logo_smaller">
 				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-				  
-				  <table id="census" class="table table-striped table-hover" style="width:100%">
+				  <h3>JD Ordinaria 29/06/2023</h3> <br>
+				  <h4>Miembros</h4> <hr>
+				  <table id="" class="table table-striped table-hover" style="width:100%">
 					<thead>
 					  <tr>
 						<th>Nombre</th>
 						<th>Apellidos</th>
-						<th>Email</th>
-						<th>Teléfono</th>
-						<th>Titulación</th>
-						<th>Cargo</th>
+						<th>¿Asiste?</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -40,16 +38,8 @@
 						  <p class="surname">González González</p>
 						</td>
 						<td>
-						  <p class="email">r.ggonzalez@alumnos.upm.es</p>
-						</td>
-						<td>
-						  <p class="phone">625749856</p>
-						</td>
-						<td>
-							<p class="degree">GITST</p>
-						</td>
-						<td>
-							<p class="position">Delegado/a del grupo 34</p>
+						  <button class="btn btn-outline-success">Asiste</button>
+						  <button class="btn btn-outline-danger">No Asiste</button>
 						</td>
 					  </tr>
 
@@ -61,17 +51,50 @@
 						  <p class="surname">Vázquez Gómez</p>
 						</td>
 						<td>
-						  <p class="email">javier.vgomez@alumnos.upm.es</p>
+							<button class="btn btn-outline-success">Asiste</button>
+							<button class="btn btn-outline-danger">No Asiste</button>
+						  </td>
+					  </tr>
+
+					</tbody>
+				  </table>
+
+
+				<h4>Invitados</h4>
+				<hr>
+				  <table id="" class="table table-striped table-hover" style="width:100%">
+					<thead>
+					  <tr>
+						<th>Nombre</th>
+						<th>Apellidos</th>
+						<th>¿Asiste?</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr id="">
+						<td>
+						  <p class="name">Elena</p>
 						</td>
 						<td>
-						  <p class="phone">658965874</p>
+						  <p class="surname">Suarez Pérez</p>
 						</td>
 						<td>
-							<p class="degree">GIB</p>
+						  <button class="btn btn-outline-success">Asiste</button>
+						  <button class="btn btn-outline-danger">No Asiste</button>
+						</td>
+					  </tr>
+
+					  <tr id="">
+						<td>
+						  <p class="name">Víctor</p>
 						</td>
 						<td>
-							<p class="position">Delegado/a del grupo 22</p>
+						  <p class="surname">Serrano Martín</p>
 						</td>
+						<td>
+							<button class="btn btn-outline-success">Asiste</button>
+							<button class="btn btn-outline-danger">No Asiste</button>
+						  </td>
 					  </tr>
 
 					</tbody>
