Added development dependencies

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 	<body
 		style="
-			background-image: url('img/fondo_siu.svg');
+			background-image: url('img/fondo_siu_DAT.svg');
 			background-repeat: no-repeat no-repeat;
 			background-position: center center;
 			background-size: cover;
@@ -50,7 +50,7 @@
 								<form
 									id="kc-form-login"
 									onsubmit="login.disabled = true; return true;"
-									action="https://siu.upm.es/realms/sso-upm/login-actions/authenticate?session_code=Ng4ntB9t3lE7wA3MqDa78aqmtqJjnCIRA1oTrLGAgH0&amp;execution=f2a01105-bae1-450c-ad9c-d22933fbb440&amp;client_id=account-console&amp;tab_id=RCsbr0l_qEE"
+									action=""
 									method="post"
 								>
 									<div class="form-group">
