--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,7 +35,7 @@
 
 						<div class="form-outline mb-3">
 							<label class="form-label" for="email">Email:</label>
-							<input type="email" id="email" class="form-control form-control-lg" value="r.ggonzalez@alumnos.upm.es"/>
+							<input type="email" id="email" class="form-control form-control-lg" th:value="${email}"/>
 						</div>
 		
 						<div class="form-outline mb-3">
