Fixed static paths

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -21,6 +21,10 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
+.form-control-lg {
+  font-size: 1.1rem;
+}
+
 .global-margin-top {
   margin-top: 50px;
 }
@@ -34,9 +38,10 @@ body {
   color: rgb(255, 255, 255) !important;
 }
 
-#logo_identiDAT {
-  width: 100%;
+#logo {
+  width: 400px !important;
   margin-bottom: 50px;
+  justify-self: center;
 }
 
 .logo_smaller {
