--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,80 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="css/main.css" />
 
-		<title>identiDAT - Register</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<body>
-		
-		<div class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom">
-			  <div class="row d-flex justify-content-center align-items-center h-100">
-				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
-				<img src="img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto">
-				  <div class="card" style="border-radius: 15px;">
+	<title>identiDAT - Register</title>
+</head>
+
+<body>
+
+	<div
+		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
+		<div class="row d-flex align-items-center justify-content-center h-100">
+			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto">
+			<div class="col-12 col-md-10 col-lg-10 col-xl-10">
+				<div class="card" style="border-radius: 15px;">
 					<div class="card-body p-5">
-					  <h2 class="text-uppercase text-center mb-5">Registro en censo DAT</h2>
-		
-					  <form>
-		
-						<div class="form-outline mb-3">
-						  <label class="form-label" for="name">Nombre:</label>
-						  <input type="text" id="name" class="form-control form-control-lg" value="Rosa" />
-						</div>
-		
-						<div class="form-outline mb-3">
-						  <label class="form-label" for="surname">Apellidos:</label>
-						  <input type="text" id="surname" class="form-control form-control-lg" value="González González" />
-						</div>
+						<h2 class="text-uppercase text-center mb-5">Registro en el censo de DAT</h2>
 
-						<div class="form-outline mb-3">
-							<label class="form-label" for="email">Email:</label>
-							<input type="email" id="email" class="form-control form-control-lg" th:value="${email}"/>
-						</div>
-		
-						<div class="form-outline mb-3">
-							<label class="form-label" for="phone">Teléfono:</label>
-							<input type="text" id="phone" class="form-control form-control-lg" />
-						</div>
+						<form>
 
-						<div class="form-outline mb-3">
-							<label class="form-label" for="degree">Titulación:</label>
-							<input type="text" id="degree" class="form-control form-control-lg" disabled value="GITST"/>
-						</div>
+							<div class="form-outline mb-3">
+								<label class="form-label" for="name">Nombre:</label>
+								<input type="text" id="name" class="form-control form-control-lg" value="Rosa" />
+							</div>
 
-						<div class="form-outline mb-3">
-							<label class="form-label" for="position">Cargo:</label>
-							<input type="text" id="position" class="form-control form-control-lg" disabled value="Delegado/a del grupo 34"/>
-						</div>
-		
-						<div class="form-check d-flex justify-content-center mb-5">
-						  <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-						  <label class="form-check-label" for="form2Example3g">
-							Estoy de acuerdo con los <a href="#!" class="text-body"><u>Términos y Condiciones</u></a> de servicio
-						  </label>
-						</div>
-		
-						<div class="d-flex justify-content-center">
-						  <a href="profile.html" type="button"
-							class="btn btn-danger btn-dat btn-block btn-lg text-body">Registrarse</a>
-						</div>
-		
-					  </form>
-		
+							<div class="form-outline mb-3">
+								<label class="form-label" for="surname">Apellidos:</label>
+								<input type="text" id="surname" class="form-control form-control-lg"
+									value="González González" />
+							</div>
+
+							<div class="form-outline mb-3">
+								<label class="form-label" for="email">Email:</label>
+								<input type="email" id="email" class="form-control form-control-lg" disabled
+									th:value="${email}" />
+							</div>
+
+							<div class="form-outline mb-3">
+								<label class="form-label" for="phone">Teléfono:</label>
+								<input type="text" id="phone" class="form-control form-control-lg" />
+							</div>
+
+							<div class="form-outline mb-3">
+								<label class="form-label" for="degree">Titulación:</label>
+								<input type="text" id="degree" class="form-control form-control-lg" disabled
+									value="GITST" />
+							</div>
+
+							<div class="form-outline mb-3">
+								<label class="form-label" for="position">Cargo:</label>
+								<input type="text" id="position" class="form-control form-control-lg" disabled
+									value="Delegado/a del grupo 34" />
+							</div>
+
+							<div class="form-check d-flex justify-content-center mb-5">
+								<input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
+								<label class="form-check-label" for="form2Example3g">
+									Estoy de acuerdo con los <a href="#!" class="text-body"><u>Términos y
+											Condiciones</u></a> de servicio
+								</label>
+							</div>
+
+							<div class="d-flex justify-content-center">
+								<a href="admin/census" type="button"
+									class="btn btn-danger btn-dat btn-block btn-lg text-body">Registrarse</a>
+							</div>
+
+						</form>
+
 					</div>
-				  </div>
 				</div>
-			  </div>
 			</div>
-		  </div>
+		</div>
+	</div>
+	</div>
 
-		<script src="js/jquery-3.6.3.min.js"></script>
-		<script src="js/bootstrap.bundle.min.js"></script>
-	</body>
+	<script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+</body>
+
 </html>
