--- a/src/main/resources/templates/assistance_jd.html
+++ b/src/main/resources/templates/assistance_jd.html
@@ -1,114 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/css/dataTables.bootstrap5.min.css" />
-		<link rel="stylesheet" href="../static/css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="../static/css/main.css" />
 
-		<title>identiDAT - Asistencia JD</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<body>
-		
-		<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-			<div class="container h-100">
-			  <div class="row d-flex justify-content-center align-items-center h-100">
-				<img src="../static/img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto logo_smaller">
-				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-				  <h3>JD Ordinaria 29/06/2023</h3> <br>
-				  <h4>Miembros</h4> <hr>
-				  <table id="" class="table table-striped table-hover" style="width:100%">
-					<thead>
-					  <tr>
-						<th>Nombre</th>
-						<th>Apellidos</th>
-						<th>¿Asiste?</th>
-					  </tr>
-					</thead>
-					<tbody>
-					  <tr id="">
-						<td>
-						  <p class="name">Rosa</p>
-						</td>
-						<td>
-						  <p class="surname">González González</p>
-						</td>
-						<td>
-						  <button class="btn btn-outline-success">Asiste</button>
-						  <button class="btn btn-outline-danger">No Asiste</button>
-						</td>
-					  </tr>
+	<title>identiDAT - Asistencia JD</title>
+</head>
 
-					  <tr id="">
-						<td>
-						  <p class="name">Javier</p>
-						</td>
-						<td>
-						  <p class="surname">Vázquez Gómez</p>
-						</td>
-						<td>
-							<button class="btn btn-outline-success">Asiste</button>
-							<button class="btn btn-outline-danger">No Asiste</button>
-						  </td>
-					  </tr>
+<body>
 
-					</tbody>
-				  </table>
-
-
-				<h4>Invitados</h4>
-				<hr>
-				  <table id="" class="table table-striped table-hover" style="width:100%">
-					<thead>
-					  <tr>
-						<th>Nombre</th>
-						<th>Apellidos</th>
-						<th>¿Asiste?</th>
-					  </tr>
-					</thead>
-					<tbody>
-					  <tr id="">
-						<td>
-						  <p class="name">Elena</p>
-						</td>
-						<td>
-						  <p class="surname">Suarez Pérez</p>
-						</td>
-						<td>
-						  <button class="btn btn-outline-success">Asiste</button>
-						  <button class="btn btn-outline-danger">No Asiste</button>
-						</td>
-					  </tr>
-
-					  <tr id="">
-						<td>
-						  <p class="name">Víctor</p>
-						</td>
-						<td>
-						  <p class="surname">Serrano Martín</p>
-						</td>
-						<td>
-							<button class="btn btn-outline-success">Asiste</button>
-							<button class="btn btn-outline-danger">No Asiste</button>
-						  </td>
-					  </tr>
-
-					</tbody>
-				  </table>
-				  
-				</div>
-			  </div>
+	<div
+		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
+		<div class="container h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
 			</div>
-		  </div>
-		
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
+					<h3>JD Extraordinaria 06/03/2023</h3> <br>
+					<h4>Miembros</h4>
+					<hr>
+					<table id="" class="table table-striped table-hover" style="width:100%">
+						<thead>
+							<tr>
+								<th>Nombre</th>
+								<th>Apellidos</th>
+								<th>¿Asiste?</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr id="">
+								<td>
+									<p class="name">Rosa</p>
+								</td>
+								<td>
+									<p class="surname">González González</p>
+								</td>
+								<td>
+									<button class="btn btn-outline-success">Asiste</button>
+									<button class="btn btn-outline-danger">No Asiste</button>
+								</td>
+							</tr>
 
-		<script src="../static/js/jquery-3.6.3.min.js"></script>
-		<script src="../static/js/bootstrap.bundle.min.js"></script>
-		<script src="../static/js/dataTables.bootstrap5.min.js"></script>
-		<script src="../static/js/functions.js"></script>
-	</body>
+							<tr id="">
+								<td>
+									<p class="name">Javier</p>
+								</td>
+								<td>
+									<p class="surname">Vázquez Gómez</p>
+								</td>
+								<td>
+									<button class="btn btn-outline-success">Asiste</button>
+									<button class="btn btn-outline-danger">No Asiste</button>
+								</td>
+							</tr>
+
+						</tbody>
+					</table>
+
+
+					<h4>Invitados</h4>
+					<hr>
+					<table id="" class="table table-striped table-hover" style="width:100%">
+						<thead>
+							<tr>
+								<th>Nombre</th>
+								<th>Apellidos</th>
+								<th>¿Asiste?</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr id="">
+								<td>
+									<p class="name">Elena</p>
+								</td>
+								<td>
+									<p class="surname">Suarez Pérez</p>
+								</td>
+								<td>
+									<button class="btn btn-outline-success">Asiste</button>
+									<button class="btn btn-outline-danger">No Asiste</button>
+								</td>
+							</tr>
+
+							<tr id="">
+								<td>
+									<p class="name">Víctor</p>
+								</td>
+								<td>
+									<p class="surname">Serrano Martín</p>
+								</td>
+								<td>
+									<button class="btn btn-outline-success">Asiste</button>
+									<button class="btn btn-outline-danger">No Asiste</button>
+								</td>
+							</tr>
+
+						</tbody>
+					</table>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<script th:src="@{js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{js/dataTables.bootstrap5.min.js}"></script>
+	<script th:src="@{js/functions.js}"></script>
+</body>
+
 </html>
