--- a/src/main/resources/templates/census.html
+++ b/src/main/resources/templates/census.html
@@ -1,91 +1,95 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/css/dataTables.bootstrap5.min.css" />
-		<link rel="stylesheet" href="../static/css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="../static/css/main.css" />
 
-		<title>identiDAT - Censo</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<body>
-		
-		<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-			<div class="container h-100">
-			  <div class="row d-flex justify-content-center align-items-center h-100">
-				<img src="../static/img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto logo_smaller">
-				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-				  
-				  <table id="census" class="table table-striped table-hover" style="width:100%">
+	<title>identiDAT - Censo</title>
+</head>
+
+<body>
+
+	<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
+	<div class="container h-100">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
+		</div>
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<div class="col-12 col-md-10 col-lg-8 col-xl-8">
+
+				<table id="census" class="table table-striped table-hover" style="width:100%">
 					<thead>
-					  <tr>
-						<th>Nombre</th>
-						<th>Apellidos</th>
-						<th>Email</th>
-						<th>Teléfono</th>
-						<th>Titulación</th>
-						<th>Cargo</th>
-					  </tr>
+						<tr>
+							<th>Nombre</th>
+							<th>Apellidos</th>
+							<th>Email</th>
+							<th>Teléfono</th>
+							<th>Titulación</th>
+							<th>Cargo</th>
+						</tr>
 					</thead>
 					<tbody>
-					  <tr id="">
-						<td>
-						  <p class="name">Rosa</p>
-						</td>
-						<td>
-						  <p class="surname">González González</p>
-						</td>
-						<td>
-						  <p class="email">r.ggonzalez@alumnos.upm.es</p>
-						</td>
-						<td>
-						  <p class="phone">625749856</p>
-						</td>
-						<td>
-							<p class="degree">GITST</p>
-						</td>
-						<td>
-							<p class="position">Delegado/a del grupo 34</p>
-						</td>
-					  </tr>
+						<tr id="">
+							<td>
+								<p class="name">Rosa</p>
+							</td>
+							<td>
+								<p class="surname">González González</p>
+							</td>
+							<td>
+								<p class="email">r.ggonzalez@alumnos.upm.es</p>
+							</td>
+							<td>
+								<p class="phone">625749856</p>
+							</td>
+							<td>
+								<p class="degree">GITST</p>
+							</td>
+							<td>
+								<p class="position">Delegado/a del grupo 34</p>
+							</td>
+						</tr>
 
-					  <tr id="">
-						<td>
-						  <p class="name">Javier</p>
-						</td>
-						<td>
-						  <p class="surname">Vázquez Gómez</p>
-						</td>
-						<td>
-						  <p class="email">javier.vgomez@alumnos.upm.es</p>
-						</td>
-						<td>
-						  <p class="phone">658965874</p>
-						</td>
-						<td>
-							<p class="degree">GIB</p>
-						</td>
-						<td>
-							<p class="position">Delegado/a del grupo 22</p>
-						</td>
-					  </tr>
+						<tr id="">
+							<td>
+								<p class="name">Javier</p>
+							</td>
+							<td>
+								<p class="surname">Vázquez Gómez</p>
+							</td>
+							<td>
+								<p class="email">javier.vgomez@alumnos.upm.es</p>
+							</td>
+							<td>
+								<p class="phone">658965874</p>
+							</td>
+							<td>
+								<p class="degree">GIB</p>
+							</td>
+							<td>
+								<p class="position">Delegado/a del grupo 22</p>
+							</td>
+						</tr>
 
 					</tbody>
-				  </table>
-				  
-				</div>
-			  </div>
-			</div>
-		  </div>
-		
+				</table>
 
-		<script src="../static/js/jquery-3.6.3.min.js"></script>
-		<script src="../static/js/bootstrap.bundle.min.js"></script>
-		<script src="../static/js/dataTables.bootstrap5.min.js"></script>
-		<script src="../static/js/functions.js"></script>
-	</body>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
+	<script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+	<script th:src="@{/js/functions.js}"></script>
+</body>
+
 </html>
