--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="css/main.css" />
 
-		<title>identiDAT - Register</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<body>
-		
-		<div class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom">
-			  <div class="row d-flex justify-content-center align-items-center h-100">
-				<div class="col-12 col-md-9 col-lg-7 col-xl-6">
-				<img src="img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto">
-				  <div class="card" style="border-radius: 15px;">
+	<title>identiDAT - Register</title>
+</head>
+
+<body>
+
+	<div
+		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
+		<div class="row d-flex justify-content-center align-items-center h-100">
+			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto">
+			<div class="col-12 col-md-10 col-lg-10 col-xl-10">
+				<div class="card" style="border-radius: 15px;">
 					<div class="card-body p-5">
-					  <h2 class="text-uppercase text-center mb-5">ERROR</h2>
-		
-					  
-					</div>
-				  </div>
-				</div>
-			  </div>
-			</div>
-		  </div>
+						<h2 class="text-uppercase text-center mb-5">ERROR</h2>
 
-		<script src="js/jquery-3.6.3.min.js"></script>
-		<script src="js/bootstrap.bundle.min.js"></script>
-	</body>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+
+	<script th:src="@{js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+</body>
+
 </html>
