--- a/src/main/resources/templates/jd.html
+++ b/src/main/resources/templates/jd.html
@@ -1,80 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../static/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="../static/css/dataTables.bootstrap5.min.css" />
-		<link rel="stylesheet" href="../static/css/materialdesignicons.min.css" />
-		<link rel="stylesheet" href="../static/css/main.css" />
 
-		<title>identiDAT - JDs</title>
-	</head>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<body>
-		
-		<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-			<div class="container h-100">
-			  <div class="row d-flex justify-content-center align-items-center h-100">
-				<img src="../static/img/logo_identiDAT.png" alt="logo_identiDAT" id="logo_identiDAT" class="mx-auto logo_smaller">
+	<title>identiDAT - JDs</title>
+</head>
+
+<body>
+
+	<div
+		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
+		<div class="container h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
+			</div>
+			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-				  
-					<div class="rounded-lg jumbotron">
+					<div class="rounded-lg jumbDocumentaciónn">
 						<h1 class="display-4">JD</h1>
-						<p class="lead">Aquí se puede convocar una nueva JD así como consultar la documentación de las anteriores</p>
+						<p class="lead">Aquí se puede convocar una nueva JD así como consultar la documentación de las
+							anteriores</p>
 						<hr class="my-4">
 						<p>Para convocar una JD haga click en el siguiente botón</p>
-			
-						<button type="button" class="btn btn-dat btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#newJD">
-						Convocar JD
+
+						<button type="button" class="btn btn-dat btn-danger btn-lg" data-bs-toggle="modal"
+							data-bs-target="#newJD">
+							Convocar JD
 						</button>
 
 						<br><br><br><br>
-						
-					</div>
-				</div>
-				</div>
-				<div class="row d-flex justify-content-center align-items-center h-100">
-					<div class="col-sm-3">
-						<div class="card" style="width: 18rem;">
-							<div class="card-body">
-							  <h5 class="card-title">JD 10/10/2022</h5>
-							  <h6 class="card-subtitle mb-2 text-muted">Ordinaria</h6>
-							  <p class="card-text">Se trataron temas telativos a .....</p>
-							  <a href="#" class="card-link">Acta</a>
-							  <a href="#" class="card-link">Otro</a>
-							</div>
-						  </div>
-					</div>
-					<div class="col-sm-4">
-						<div class="card" style="width: 18rem;">
-							<div class="card-body">
-								<h5 class="card-title">JD 23/11/2022</h5>
-								<h6 class="card-subtitle mb-2 text-muted">Extraordinaria</h6>
-								<p class="card-text">Se trataron temas telativos a .....</p>
-								<a href="#" class="card-link">Acta</a>
-								<a href="#" class="card-link">Otro</a>
-						</div>
-						</div>
-					</div>
-
 
 					</div>
-					</div>
-				  
-				  
 				</div>
-			  </div>
 			</div>
-		  </div>
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col-sm-3">
+					<div class="card" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title">JD 10/10/2022</h5>
+							<h6 class="card-subtitle mb-2 text-muted">Ordinaria</h6>
+							<p class="card-text">Se trataron temas telativos a .....</p>
+							<a href="#" class="card-link">Acta</a>
+							<a href="#" class="card-link">Documentación</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="card" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title">JD 06/03/2023</h5>
+							<h6 class="card-subtitle mb-2 text-muted">Extraordinaria</h6>
+							<p class="card-text">Se trataron temas telativos a .....</p>
+							<a href="#" class="card-link">Acta</a>
+							<a href="#" class="card-link">Documentación</a>
+							<a href="/admin/assistance" class="card-link">Asistencia</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	</div>
+	</div>
 
 
 
-		<!-- Modal Frm Añadir JD -->
-		<div class="modal fade" id="newJD" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog modal-xl">
-				<div class="modal-content">
+	<!-- Modal Frm Añadir JD -->
+	<div class="modal fade" id="newJD" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-xl">
+			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">Nueva JD</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -83,34 +85,35 @@
 					<form>
 						<div class="mb-3">
 							<label for="exampleFormControlInput1" class="form-label">Fecha 1ª Convocatoria:</label>
-							<input type="datetime-local" class="form-control" id="tituloPeli" name="tituloPeli">
+							<input type="datetime-local" class="form-control" id="fechaJD" name="fechaJD">
 						</div>
-						
+
 						<div class="input-group mb-3">
 							<div class="input-group-prepend">
-							  <label class="input-group-text" for="inputGroupSelect01">Tipo de Junta:</label>
+								<label class="input-group-text" for="inputGroupSelect01">Tipo de Junta:</label>
 							</div>
 							<select class="custom-select" id="inputGroupSelect01">
-							  <option value="1">Ordinaria</option>
-							  <option value="2">Extraordinaria</option>
+								<option value="1">Ordinaria</option>
+								<option value="2">Extraordinaria</option>
 							</select>
-						  </div>
-						 
+						</div>
+
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Volver</button>
 					<button class="btn btn-primary" type="submit">Añadir</button>
-	
+
 					</form>
 				</div>
-				</div>
 			</div>
-			</div>
-		
+		</div>
+	</div>
 
-		<script src="../static/js/jquery-3.6.3.min.js"></script>
-		<script src="../static/js/bootstrap.bundle.min.js"></script>
-		<script src="../static/js/dataTables.bootstrap5.min.js"></script>
-		<script src="../static/js/functions.js"></script>
-	</body>
+
+	<script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+	<script th:src="@{/js/functions.js}"></script>
+</body>
+
 </html>
