--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
 	<link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<title>identiDAT - Register</title>
+	<title>identiDAT - Error</title>
 </head>
 
 <body>
