Added admin interface
Co-authored-by: Álvaro Rosado <aLVaRoZz01@users.noreply.github.com>

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -68,7 +68,7 @@
 							</div>
 
 							<div class="d-flex justify-content-center">
-								<a href="admin/census" type="button"
+								<a href="admin" type="button"
 									class="btn btn-danger btn-dat btn-block btn-lg text-body">Registrarse</a>
 							</div>
 
