--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -23,6 +23,7 @@
 					<div class="card-body p-5 text-center">
 						<a href="/admin/census" class="btn btn-outline-secondary btn-lg">Censo</a>
                         <a href="/admin/jd" class="btn btn-outline-secondary btn-lg">JD</a>
+						<a href="/admin/tokens" class="btn btn-outline-secondary btn-lg">Tokens</a>
 					</div>
 				</div>
 			</div>
