--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,35 +23,36 @@
 					<div class="card-body p-5">
 						<h2 class="text-uppercase text-center mb-5">Registro en el censo de DAT</h2>
 
-						<form>
+						<form id="form" th:action="@{/register}" method="POST" th:object="${censusMemberForm}">
+							<input type="hidden" th:field="*{censusMember.id}" />
 
 							<div class="form-outline mb-3">
 								<label class="form-label" for="name">Nombre:</label>
-								<input type="text" id="name" class="form-control form-control-lg" disabled
+								<input type="text" th:field="*{censusMember.name}" class="form-control form-control-lg" disabled
 								th:value="${given_name}"  />
 							</div>
 
 							<div class="form-outline mb-3">
 								<label class="form-label" for="surname">Apellidos:</label>
-								<input type="text" id="surname" class="form-control form-control-lg"
+								<input type="text" th:field="*{censusMember.surname}" class="form-control form-control-lg"
 								disabled th:value="${family_name}"  />
 							</div>
 
 							<div class="form-outline mb-3">
 								<label class="form-label" for="email">Email:</label>
-								<input type="email" id="email" class="form-control form-control-lg" disabled
+								<input type="email" th:field="*{censusMember.email}" class="form-control form-control-lg" disabled
 									th:value="${email}" />
 							</div>
 
 							<div class="form-outline mb-3">
 								<label class="form-label" for="phone">Teléfono:</label>
-								<input type="text" id="phone" class="form-control form-control-lg" />
+								<input type="text" th:field="*{censusMember.phone}" class="form-control form-control-lg" />
 							</div>
 
 							<div class="form-outline mb-3">
 								<label class="form-label" for="degree">Titulación:</label>
-								<input type="text" id="degree" class="form-control form-control-lg" disabled
-									value="GITST" />
+								<input type="number" th:field="*{censusMember.degree}" class="form-control form-control-lg" disabled
+									value=1 />
 							</div>
 
 							<div class="form-outline mb-3">
@@ -69,8 +70,8 @@
 							</div>
 
 							<div class="d-flex justify-content-center">
-								<a href="admin" type="button"
-									class="btn btn-danger btn-dat btn-block btn-lg text-body">Registrarse</a>
+								<input type="submit"
+									class="btn btn-danger btn-dat btn-block btn-lg text-body" value="Registrarse"></input>
 							</div>
 
 						</form>
