--- a/src/main/resources/templates/tokens.html
+++ b/src/main/resources/templates/tokens.html
@@ -28,6 +28,7 @@
                         <option value="GITST">GITST</option>
                         <option value="GIB">GIB</option>
                         <option value="MUIT">MUIT</option>
+                        <option value="GISD">GISD</option>
                     </select>
                     <select name="year" id="año">
                         <option value="All">All</option>
@@ -54,6 +55,7 @@
                         <input type="submit" id="bToken" class="btn btn-outline-secondary btn-lg"> <!--onclick="changeString()"-->
                     </div>
                 </form>
+                <!--
 				<table id="Tokens" class="table table-striped table-hover" style="width:100%">
 					<thead>
 						<tr>
@@ -80,6 +82,7 @@
 						</tr>
 					</tbody>
 				</table>
+                -->
             </div>
 		</div>
 	</div>
