--- a/src/main/resources/templates/tokens.html
+++ b/src/main/resources/templates/tokens.html
@@ -2,35 +2,56 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/main.css}" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<title>identiDAT - Tokens</title>
+    <title>identiDAT - Tokens</title>
 </head>
 
 <body>
 
-	<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-	<div class="container h-100">
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
-		</div>
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-                <h2>Que token deseas crear hoy:</h2>
+    <div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
+        </div>
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-10 col-lg-8 col-xl-8">
+                <h2>Qué token deseas crear hoy?</h2>
                 <form id="form" th:action="@{/saveToken}" method="POST">
-                    <select name="degree" id="grado">
-                        <option value="GITST">GITST</option>
-                        <option value="GIB">GIB</option>
-                        <option value="MUIT">MUIT</option>
-                        <option value="GISD">GISD</option>
-                    </select>
-                    <select name="year" id="año">
+                    <span th:each="degree : ${degrees}" class="selector">
+                        <input type="checkbox" th:value="${degree.id}" th:text="${degree.acronym}" name="degree"
+                            id="degree"></input>
+                        <br />
+                        <fieldset style="display:none">
+                            <br />
+                            <span th:if="${degree.acronym == 'DAT' && position.id >= 7}"
+                                th:each="position : ${positions}">
+                                <input type="checkbox" th:value="${position.id}" th:text="${position.position}"
+                                    name="position" id="position"></input>
+                                <br />
+                            </span>
+
+                            <span th:if="${degree.acronym != 'DAT' && position.id < 7}"
+                                th:each="position : ${positions}">
+                                <input type="checkbox" th:value="${position.id}" th:text="${position.position}"
+                                    name="position" id="position"></input>
+                                <input type="text"></input>
+                                <br />
+                            </span>
+                            <br />
+                            <br />
+                        </fieldset>
+                    </span>
+
+
+
+                    <!--<select name="year" id="año">
                         <option value="All">All</option>
                         <option value="1">Primero</option>
                         <option value="2">Segundo</option>
@@ -44,15 +65,11 @@
                         <option value="3">Grupo 3</option>
                         <option value="4">Grupo 4</option>
                         <option value="5">Grupo 5</option>
-                    </select>
-					<select name="position" id="position">
-                        <option value="All">Ambos</option>
-                        <option value="delegado">Delegado</option>
-                        <option value="subdelegado">Subdelegado</option>
-                    </select>
+                    </select>-->
 
                     <div class="text-center">
-                        <input type="submit" id="bToken" class="btn btn-outline-secondary btn-lg"> <!--onclick="changeString()"-->
+                        <input type="submit" id="bToken" class="btn btn-outline-secondary btn-lg">
+                        <!--onclick="changeString()"-->
                     </div>
                 </form>
                 <!--
@@ -84,9 +101,9 @@
 				</table>
                 -->
             </div>
-		</div>
-	</div>
-	
+        </div>
+    </div>
+
     </div>
 
     <script th:src="@{/js/genToken.js}"></script>
@@ -101,8 +118,9 @@
             document.getElementById("algo").innerHTML = hash;
         });*/
     </script>
-    <script th:src="@{js/jquery-3.6.3.min.js}"></script>
-	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/adminFunctions.js}"></script>
 </body>
 
 </html>
