Created admin dir for client js

--- a/src/main/resources/templates/jd.html
+++ b/src/main/resources/templates/jd.html
@@ -113,7 +113,7 @@
 	<script th:src="@{/js/jquery-3.6.3.min.js}"></script>
 	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 	<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
-	<script th:src="@{/js/adminFunctions.js}"></script>
+	<script th:src="@{/js/admin/adminFunctions.js}"></script>
 </body>
 
 </html>
