--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -31,22 +31,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="{{ pro['id'] }}" >
-                <td>
-                    <p class="name">{{ Perfil['name'] }}</p>
-                </td>
-                <td>
-                    <p class="surname">{{ Perfil['surname'] }}</p>
-                </td>
-                <td>
-                    <p class="email">{{ Perfil['email'] }}</p>
-                </td>
-                <td>
-                    <p class="phone">{{ Perfil['phone'] }}</p>
-                </td>
-                <td>
-                    <p class="degree">{{ Perfil['degree'] }}</p> 
-                </td>
+                <tr th:each="censusMember: ${censusMembers}">
+                    <td th:text="${censusMember.name}">
+                    <td th:text="${censusMember.surname}">
+                    <td th:text="${censusMember.email}">
+                    <td th:text="${censusMember.phone}">
+                    <td th:text="${censusMember.degree}">
                 <td class="text-center">
                     <a href="#/" onclick="showProfile($(this))"><a href="#/" onclick="showProfile($(this))"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F65555" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a></a>
 
