Removed arrows from numerical type input

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -98,4 +98,14 @@ body {
 
 .shadow-none {
   box-shadow: none !important;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
 }/*# sourceMappingURL=main.css.map */
